# bitbucket-webhook

./: README.md  pyproject.toml
bitbucket-webhook/: main.py
config/: config.ini
tests/: config.ini  dev-branch.json  payload.json  test.bash
